--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "framer-motion": "^7.3.6",
     "next": "^12.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "three": "^0.145.0"
   }
 }
