--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "^12.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "three": "^0.145.0"
   }
 }
