--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@chakra-ui/react": "^2.3.4",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@react-three/drei": "^9.40.5",
+    "@react-three/fiber": "^8.9.1",
     "framer-motion": "^7.3.6",
     "next": "^12.3.1",
     "react": "^18.2.0",
