--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@react-three/fiber": "^8.9.1",
     "framer-motion": "^7.3.6",
     "next": "^12.3.1",
+    "next-translate": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
