--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-syntax-highlighter": "^15.5.0",
     "three": "^0.145.0"
   }
 }
