--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "framer-motion": "^7.3.6",
     "next": "^12.3.1",
     "next-translate": "^1.6.0",
+    "prettier": "^2.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
