--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "dev": "next dev -H 0.0.0.0",
     "build": "next build",
+    "start": "next start",
     "prettier": "prettier -write .",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sitemap": "next-sitemap"
   },
   "repository": {
     "type": "git",
@@ -29,6 +31,8 @@
     "@react-three/fiber": "^8.9.1",
     "framer-motion": "^7.3.6",
     "next": "^12.3.1",
+    "next-seo": "^6.1.0",
+    "next-sitemap": "^4.1.3",
     "next-translate": "^1.6.0",
     "prettier": "^2.8.3",
     "react": "^18.2.0",
