--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@emotion/styled": "^11.10.4",
     "@react-three/drei": "^9.40.5",
     "@react-three/fiber": "^8.9.1",
-    "framer-motion": "^7.3.6",
+    "framer-motion": "10.16.4",
     "next": "^12.3.1",
     "next-seo": "^6.1.0",
     "next-sitemap": "^4.1.3",
