--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "portfolio-page",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prettify": "prettier --write ."
+    "prod": "yarn build && yarn start",
+    "prettify": "prettier --write .",
+    "sitemap": "next-sitemap"
   },
   "engines": {
     "node": "18.x - 20.x"
@@ -23,7 +25,7 @@
     "next": "14.0.4",
     "next-seo": "6.1.0",
     "next-sitemap": "4.1.3",
-    "next-translate": "^2.6.2",
+    "next-translate": "2.6.2",
     "prettier": "3.2.3",
     "react": "18",
     "react-dom": "18",
@@ -36,7 +38,7 @@
     "@types/react-dom": "18",
     "eslint": "8",
     "eslint-config-next": "14.0.4",
-    "next-translate-plugin": "^2.6.2",
+    "next-translate-plugin": "2.6.2",
     "typescript": "5"
   }
 }
